force-app/main/default/objects/ADM_Copy_Log__c/ADM_Copy_Log__c.object-meta.xml
<CustomObject>
    <label>Copy Log</label>
    <nameField>
        <displayFormat>CL-{00000}</displayFormat>
        <label>Copy Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Copy Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>