force-app/main/default/objects/ADM_Copy_Log__c/fields/Copied_From__c.field-meta.xml
<CustomField>
    <fullName>Copied_From__c</fullName>
    <label>Copied From</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>