force-app/main/default/objects/ADM_Copy_Log__c/fields/Copied_On__c.field-meta.xml
<CustomField>
    <fullName>Copied_On__c</fullName>
    <label>Copied On</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>