force-app/main/default/objects/ADM_Copy_Log__c/fields/Failures__c.field-meta.xml
<CustomField>
    <fullName>Failures__c</fullName>
    <label>Failures</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>