force-app/main/default/objects/ADM_Copy_Log__c/fields/Text__c.field-meta.xml
<CustomField>
    <fullName>Text__c</fullName>
    <label>Text</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>