force-app/main/default/objects/ADM_Copy_Log__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Used to identify which type of copy log this is going to be. We currently use 3 types: changelist for perforce checkins, error to report errors with the sync, and work to represent the migration of bugs from bugforce to work records on the platform.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Changelist</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Work</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>