force-app/main/default/objects/ADM_Copy_Log__c/fields/Upserts__c.field-meta.xml
<CustomField>
    <fullName>Upserts__c</fullName>
    <label>Inserts/Updates</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>